coral-component-table/src/styles/index.styl
/* ... */
/* END #sticky */

/* #sortable */
._coral-Table-headerCell[sortable] {
  cursor: pointer;
  user-select: none;

  coral-table-headercell-content {
    position: relative;
    cursor: pointer;

    &:after {
      content: '';
      background-size: 10px 10px;
      background-position: 50%;
      background-repeat: no-repeat;
      position: absolute;
      height: 10px;
      width: 10px;
      padding-left: 10px;
      margin-left: 10px;
      margin-top: 1px;
      z-index: -1;
      transition: transform 125ms ease-in-out;
    }
  }

  &[sortabledirection="descending"] {
    coral-table-headercell-content:after {
      transform: rotateZ(180deg);
    }
  }
}
/* END #sortable */

/* #selectable */
._coral-Table-wrapper[selectable] {
  ._coral-Table-row {
    &[coral-table-rowselect]:hover:not(.is-selected) ._coral-Table-cell {
      cursor: pointer;
    }

    &.is-selected {
      &[coral-table-rowselect] {
        cursor: pointer;
      }
    }
  }
}

._coral-Table-row[selectable] {
  ._coral-Table-cell {
    &[coral-table-cellselect] {
      position: relative;
      cursor: pointer;

      &:hover {
        &:after {
          content: "";
          background-size: 18px 18px;
          background-position: 50% 50%;
          background-repeat: no-repeat;
          position: absolute;
          top: 0;
          bottom: 0;
          right: 0;
          left: 0;
        }
      }
    }

    &.is-selected {
      position: relative;

      &:after {
        content: "";
        background-size: 18px 18px;
        background-position: 50% 50%;
        background-repeat: no-repeat;
        position: absolute;
        top: 0;
        bottom: 0;
        right: 0;
        left: 0;
      }
    }
  }
}

// Align design to Miller Columns since thumbnail selection pattern was removed in Spectrum
._coral-Table-cell--check {
  white-space: nowrap;

  coral-checkbox[coral-table-rowselect] {
    margin-right: 0;

    & + img {
      height: 24px;
      width: 24px;
      object-fit: cover;
      vertical-align: middle;
      margin-top: 4px;
      margin-left: 8px;
    }

    & + coral-icon {
      height: 32px;
      width: 24px;
      margin-left: 8px;
    }
  }
}

table[is="coral-table"]:not([selectable]) {
  td[is="coral-table-cell"],
  th[is="coral-table-headercell"] {
    [coral-table-select],
    [coral-table-rowselect] {
      display: none;
    }

    [coral-table-rowselect] {
      & + img,
      & + coral-icon {
        margin: 0;
      }
    }
  }
}

tr[is="coral-table-row"]:not([selectable]) {
  td[is="coral-table-cell"],
  th[is="coral-table-headercell"] {
    [coral-table-cellselect] {
      display: none;
    }
  }
}
/* END #selectable */

/* #variant */
// Remove borders and radius for quiet variant
._coral-Table-wrapper--quiet {
  ._coral-Table-body {
    ._coral-Table-row {
      &:first-of-type {
        ._coral-Table-cell {
          &:first-of-type {
            border-top-left-radius: 0;
          }

          &:last-of-type {
            border-top-right-radius: 0;
          }
        }
      }

      &:last-of-type {
        ._coral-Table-cell {
          &:first-of-type {
            border-bottom-left-radius: 0;
          }

          &:last-of-type {
            border-bottom-right-radius: 0;
          }
        }
      }
    }
  }

  &._coral-Table-wrapper--sticky {
    ._coral-Table-wrapper-container {
      border-radius: 0;
    }

    ._coral-Table-body {
      ._coral-Table-row {
        &:first-of-type {
          ._coral-Table-cell {
            border-top: none;
          }
        }

        &:last-of-type {
          ._coral-Table-cell {
            border-bottom: none;
          }
        }
      }
    }
  }
}
/* END #variant */

/* #lockable */
._coral-Table-wrapper[lockable] ._coral-Table-row {
  [coral-table-rowlock] {
    visibility: hidden;
  }

  &[locked] {
    ._coral-Table-headerCell,
    ._coral-Table-cell {
      [coral-table-rowlock] {
        visibility: visible;
      }
    }
  }

  &:hover {
    [coral-table-rowlock] {
      visibility: visible;
    }

    &:not(.is-selected) ._coral-Table-cell {
      cursor: pointer;
    }
  }
}

table[is="coral-table"]:not([lockable]) {
  td[is="coral-table-cell"],
  th[is="coral-table-headercell"] {
    [coral-table-rowlock] {
      display: none;
    }
  }
}
/* END #lockable */

/* #orderable */
._coral-Table-headerCell,
._coral-Table-row {
  &.is-dragging,
  &.is-before,
  &.is-after {
    position: relative;
    -ms-touch-action: none;
    touch-action: none;
    user-select: none;
  }

  &.is-dragging {
    z-index: 10;
  }
}

._coral-Table-row.is-dragging {
  ._coral-Table-cell,
  ._coral-Table-headerCell {
  // @todo is it really required ?
    border-radius: 0 !important;
  }
}

._coral-Table-row--placeholder {
  visibility: hidden;
}

._coral-Table-wrapper {
// Keep the table top border while dragging
  &.is-draggedFirstItem {
    ._coral-Table-body ._coral-Table-row:nth-of-type(2) {
      ._coral-Table-cell {
        &:first-of-type {
          border-top-left-radius: 4px;
        }

        &:last-of-type {
          border-top-right-radius: 4px;
        }
      }
    }
  }

// Hide the drag handles when the table is sorted
  &.is-sorted ._coral-Table-row [coral-table-roworder] {
    visibility: hidden;
  }

  &:not(._coral-Table-wrapper--sticky) {
    ._coral-Table-row--placeholder {
      visibility: visible;

      ._coral-Table-cell,
      ._coral-Table-headerCell {
      // Hide the content, but leave the borders visible
        text-indent: -1000px;
      }
    }

  // Keep the table bottom border while dragging
    &.is-draggedLastItem  {
      ._coral-Table-body ._coral-Table-row:nth-last-of-type(2) {
        ._coral-Table-cell {
          border-bottom: 1px solid;

          &:first-of-type {
            border-bottom-left-radius: 4px;
          }

          &:last-of-type {
            border-bottom-right-radius: 4px;
          }
        }
      }
    }
  }
}
/* ... */

